First Branch Database Try

--- a/magentr/devhelp/DevelopmentNotes.html
+++ b/magentr/devhelp/DevelopmentNotes.html
@@ -133,6 +133,10 @@
                 </ul>
                 
             </p>
+            <h3>Database Plan Progress</h3>
+            <p>Progress 1: Only synced non-null range. Target Range downed from 2544, 
+            to 414. Loading time is now 4 seconds for all cell Objects.</p>
+
         </div>
     </body>
 </html>
