end of day save

--- a/magentr/devhelp/DevelopmentNotes.html
+++ b/magentr/devhelp/DevelopmentNotes.html
@@ -452,6 +452,20 @@
                 
             </p>
             <p>
+                After the code is optimized to be a progress bar indetermined, the efficiency had improved to be 11 seconds.
+
+            </p>
+            <h3>New Feature: Process multiple files / process a folder</h3>
+            <h3>Some modifications to the tbAgent Table</h3>
+            <p>
+                There needs to be somekind of M/Agent Identifyer in the tbAgent Table.
+                <br />
+                If M/Agent's M/Server cannot be found, refuse to sync M/Agent
+                <br />
+                Add a new column called "AgentName", it contains a piece of information like this: $Datacenter.$Agent<br />
+                uny40510.aur00101 => for example.
+            </p>
+            <p>
                 <br />
                 <br />
                 <br />
