Updating New Seperate .cs files

--- a/magentr/devhelp/DevelopmentNotes.html
+++ b/magentr/devhelp/DevelopmentNotes.html
@@ -456,6 +456,10 @@
 
             </p>
             <h3>New Feature: Process multiple files / process a folder</h3>
+            <p>
+                One of the problems with multiple file process is that it takes too much time to open / close the workbook.
+                It takes about 7 - 8 seconds to load and close the excel, eh, maybe it's fine.
+            </p>
             <h3>Some modifications to the tbAgent Table</h3>
             <p>
                 There needs to be somekind of M/Agent Identifyer in the tbAgent Table.
