Still working on seperation

--- a/magentr/devhelp/DevelopmentNotes.html
+++ b/magentr/devhelp/DevelopmentNotes.html
@@ -488,6 +488,17 @@
                     </li>
                 </ul>
             </p>
+            <h3>2019-03-14 Design Notes</h3>
+            <p>Currently working on trying to enable multi file process</p>
+            <p>One logical thing to do is to make sure that,
+            the Excel Application Start (which cost 7 seconds)
+            per each click, instead of each file.</p>
+            <p>
+                Maybe not 7 seconds save, after all, because the workbook
+                might actually take a bigger chunk of that time
+                to load than the excel application.
+            </p>
+            
             <p>
                 <br />
                 <br />
